@@ -196,6 +196,10 @@ int _starpu_codelet_pack_args(void **arg_buffer, size_t *arg_buffer_size, va_lis
                 {
                         (void)va_arg(varg_list, int);
                 }
+		else if (arg_type==STARPU_TASK_SYNCHRONOUS)
+                {
+                        (void)va_arg(varg_list, int);
+                }
 		else if (arg_type==STARPU_HANDLES_SEQUENTIAL_CONSISTENCY)
                 {
                         (void)va_arg(varg_list, char *);
@@ -494,6 +498,10 @@ int _starpu_task_insert_create(struct starpu_codelet *cl, struct starpu_task *ta
                 {
                         task->color = va_arg(varg_list, int);
                 }
+		else if (arg_type==STARPU_TASK_SYNCHRONOUS)
+                {
+                        task->synchronous = va_arg(varg_list, int);
+                }
 		else if (arg_type==STARPU_HANDLES_SEQUENTIAL_CONSISTENCY)
                 {
                         task->handles_sequential_consistency = va_arg(varg_list, char *);
@@ -736,6 +744,11 @@ int _fstarpu_task_insert_create(struct starpu_codelet *cl, struct starpu_task *t
                 {
                         arg_i++;
                         task->color = *(int *)arglist[arg_i];
+                }
+		else if (arg_type == STARPU_TASK_SYNCHRONOUS)
+                {
+                        arg_i++;
+                        task->synchronous = *(int *)arglist[arg_i];
                 }
 		else if (arg_type==STARPU_HANDLES_SEQUENTIAL_CONSISTENCY)
                 {
